--- a/APP-ChatGPT/android/app/src/main/AndroidManifest.xml
+++ b/APP-ChatGPT/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.marioejose.chat_gpt_app">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="Chat GTP"
         android:name="${applicationName}"
