Correções de configurações de infraestrutura

--- a/API-Gateway-ChatGPT/.htaccess
+++ b/API-Gateway-ChatGPT/.htaccess
@@ -1,3 +1,11 @@
+options All -Indexes
+
+# Header set Access-Control-Allow-Origin "*"
+
+# RewriteEngine On
+# RewriteCond %{HTTPS} off
+# RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.php -f
